H1 size fixes on mobile and removing the bug banner

--- a/css.css
+++ b/css.css
@@ -1674,11 +1674,11 @@ aside .own-art:hover {
   }
 
   /* Homepage title */
-  .home h1,
+  h1, .home h1,
   .recently-added-title {
-    font-size: 22px;
+    font-size: 32px;
     letter-spacing: 0.5px;
-    margin-bottom: 10px;
+    margin: 20px 0;
   }
 
   /* Tag header row on mobile */
